Project structure working, added linter
